# log_parser

./: .gitignore  README.md  generate_logs.py  pyproject.toml
.github/workflows/: ci.yml
logs/: logs_20260218_115837.json  logs_20260218_115837.txt  logs_20260218_115837.xml
output/: logs_20260218_115837_summary.csv  txt_logs.csv  xml_logs.csv
src/log_parser/: export_csv.py  generate_logs.py  log_dispatcher.py  log_parser.py  parser.py  robust_log_parser.py
src/log_parser/output/: selected_logs.csv
tests/: conftest.py  test_export_csv.py  test_generate_logs.py  test_log_dispatcher.py  test_parser.py  test_robust_log_parser.py
