[project]
name = "log-parser"
version = "0.1.0"
description = "Log parsing tool"
authors = [
    {name = "30405208",email = "10530797+30405208@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
